getting rid of unused files

--- a/package.json
+++ b/package.json
@@ -1,43 +1,43 @@
 {
-  "name": "slush-angular",
-  "version": "0.4.5",
-  "description": "A slush generator for AngularJS using the Google Angular App Structure Recommendations",
-  "main": "slushfile.js",
-  "scripts": {
-    "test": "NODE_ENV=test mocha -R spec test/*_test.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/slushjs/slush-angular"
-  },
-  "keywords": [
-    "slushgenerator",
-    "angular",
-    "angularjs",
-    "google",
-    "stylus",
-    "less",
-    "sass",
-    "karma"
-  ],
-  "author": "Joakim Bengtson <joakim@klei.se>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/slushjs/slush-angular/issues"
-  },
-  "homepage": "https://github.com/slushjs/slush-angular",
-  "dependencies": {
-    "gulp": "~3.8.6",
-    "gulp-template": "~0.1.1",
-    "gulp-install": "~0.2.0",
-    "gulp-conflict": "~0.2.0",
-    "underscore.string": "~2.3.3",
-    "gulp-rename": "~1.2.0",
-    "inquirer": "~0.5.1"
-  },
-  "devDependencies": {
-    "chai": "*",
-    "mocha": "*",
-    "mock-gulp-dest": "~0.1.0"
-  }
+    "name": "slush-loopback-angular",
+    "version": "0.0.1",
+    "description": "A slush generator for AngularJS using the Google Angular App Structure Recommendations",
+    "main": "slushfile.js",
+    "scripts": {
+        "test": "NODE_ENV=test mocha -R spec test/*_test.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/bdunnette/slush-loopback-angular"
+    },
+    "keywords": [
+        "slushgenerator",
+        "angular",
+        "angularjs",
+        "google",
+        "stylus",
+        "less",
+        "sass",
+        "karma"
+    ],
+    "author": "Brian Dunnette <brian@dunnette.us>",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/bdunnette/slush-loopback-angular/issues"
+    },
+    "homepage": "https://github.com/bdunnette/slush-loopback-angular",
+    "dependencies": {
+        "gulp": "~3.8.6",
+        "gulp-template": "~0.1.1",
+        "gulp-install": "~0.2.0",
+        "gulp-conflict": "~0.2.0",
+        "underscore.string": "~2.3.3",
+        "gulp-rename": "~1.2.0",
+        "inquirer": "~0.5.1"
+    },
+    "devDependencies": {
+        "chai": "*",
+        "mocha": "*",
+        "mock-gulp-dest": "~0.1.0"
+    }
 }
